--- a/app/views/website/common/_header.html.haml
+++ b/app/views/website/common/_header.html.haml
@@ -1,4 +1,6 @@
-.row
-  .large-12.columns
-    .panel
-      %h1 Feed Template
+.row.panel
+  .small-8.medium-8.large-8.columns
+    %h1 Feed Template
+  .small-4.medium-4.columns
+    %button{:id => "sign_in", :class => "button small radius"}
+      = "Sign In"
