--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -8,5 +8,6 @@
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
-    = yield
+    #login
+      = yield
     = javascript_include_tag "admin_app"
