--- a/app/views/admin/home/index.html.haml
+++ b/app/views/admin/home/index.html.haml
@@ -1,2 +1,3 @@
 %h1 Admin::Home#index
 %p Find me in app/views/admin/home/index.html.haml
+= link_to "Sign Out", destroy_admin_session_path, :method => "delete"
