--- a/app/views/layouts/desise_admin.html.haml
+++ b/app/views/layouts/desise_admin.html.haml
@@ -4,10 +4,10 @@
     %meta{:charset => "utf-8"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
     %title= content_for?(:title) ? yield(:title) : "foundation-rails"
-    = stylesheet_link_tag    "website_app"
+    = stylesheet_link_tag    "admin_app"
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
     #login
       = yield
-    = javascript_include_tag "website_app"
+    = javascript_include_tag "admin_app"
