--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -8,5 +8,8 @@
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
+    = render "admin/common_header"
+    = render "admin/secondary_bar"
+    = render "admin/side_bar"
     = yield
     = javascript_include_tag "admin_app"
