--- a/app/assets/stylesheets/admin/_custom.css
+++ b/app/assets/stylesheets/admin/_custom.css
@@ -40,7 +40,7 @@ text-decoration: underline;
 header#header {
 height: 55px;
 width: 100%;
-background: #222222 url(../images/header_bg.png) repeat-x;
+background: #222222 url('header_bg.png') repeat-x;
 }
 
 header#header h1.site_title, header#header h2.section_title {
@@ -67,7 +67,7 @@ header#header h2.section_title {
 text-align: center;
 text-indent: 4.5%;
 width: 68%;
-background: url(../images/header_shadow.png) no-repeat left top;
+background: url('header_shadow.png') no-repeat left top;
 }
 
 .btn_view_site {
@@ -80,7 +80,7 @@ display: block;
 margin-top: 12px;
 width: 91px;
 height: 27px;
-background: url(../images/btn_view_site.png) no-repeat;
+background: url('btn_view_site.png') no-repeat;
 text-align: center;
 line-height: 29px;
 color: #fff;
@@ -96,7 +96,7 @@ background-position: 0 -27px;
 section#secondary_bar {
 height: 38px;
 width: 100%;
-background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;
+background: #F1F1F4 url('secondary_bar.png') repeat-x;
 }
 
 section#secondary_bar .user {
@@ -117,7 +117,7 @@ height: 35px;
 line-height: 35px;
 text-indent: 25px;
 text-shadow: 0 1px 0 #fff;
-background: url(../images/icn_user.png) no-repeat center left;
+background: url('icn_user.png') no-repeat center left;
 margin-left: 6%;
 }
 
@@ -135,7 +135,7 @@ display: block;
 width: 16px;
 height: 35px;
 text-indent: -5000px;
-background: url(../images/icn_logout.png) center no-repeat;
+background: url('icn_logout.png') center no-repeat;
 }
 
 /* Breadcrumbs */
@@ -143,7 +143,7 @@ background: url(../images/icn_logout.png) center no-repeat;
 section#secondary_bar .breadcrumbs_container {
 float: left;
 width: 77%;
-background: url(../images/secondary_bar_shadow.png) no-repeat left top;
+background: url('secondary_bar_shadow.png') no-repeat left top;
 height: 38px;
 }
 
@@ -189,7 +189,7 @@ color: #222222;
 display: inline-block;
 width: 12px;
 height: 24px;
-background: url(../images/breadcrumb_divider.png) no-repeat;
+background: url('breadcrumb_divider.png') no-repeat;
 float: left;
 margin: 0 5px;
 }
@@ -198,7 +198,7 @@ margin: 0 5px;
 
 aside#sidebar {
 width: 23%;
-background: #E0E0E3 url(../images/sidebar.png) repeat;
+background: #E0E0E3 url('sidebar.png') repeat;
 float: left;
 min-height: 500px;
 margin-top: -4px;
@@ -207,7 +207,7 @@ margin-top: -4px;
 #sidebar hr {
 border: none;
 outline: none;
-background: url(../images/sidebar_divider.png) repeat-x;
+background: url('sidebar_divider.png') repeat-x;
 display: block;
 width: 100%;
 height: 2px;}
@@ -232,7 +232,7 @@ color: #ccc;
 -moz-box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
 box-shadow: inset 0 2px 2px #ccc, 0 1px 0 #fff;
 text-indent: 30px;
-background: #fff url(../images/icn_search.png) no-repeat;
+background: #fff url('icn_search.png') no-repeat;
 background-position: 10px 6px;
 }
 
@@ -300,46 +300,46 @@ color: #444444;
 /* Sidebar Icons */
 
 #sidebar li.icn_new_article a {
-background: url(../images/icn_new_article.png) no-repeat center left;
+background: url('icn_new_article.png') no-repeat center left;
 }
 #sidebar li.icn_edit_article a {
-background: url(../images/icn_edit_article.png) no-repeat center left;
+background: url('icn_edit_article.png') no-repeat center left;
 }
 #sidebar li.icn_categories a {
-background: url(../images/icn_categories.png) no-repeat center left;
+background: url('icn_categories.png') no-repeat center left;
 }
 #sidebar li.icn_tags a {
-background: url(../images/icn_tags.png) no-repeat center left;
+background: url('icn_tags.png') no-repeat center left;
 }
 #sidebar li.icn_add_user a {
-background: url(../images/icn_add_user.png) no-repeat center left;
+background: url('icn_add_user.png') no-repeat center left;
 }
 #sidebar li.icn_view_users a {
-background: url(../images/icn_view_users.png) no-repeat center left;
+background: url('icn_view_users.png') no-repeat center left;
 }
 #sidebar li.icn_profile a {
-background: url(../images/icn_profile.png) no-repeat center left;
+background: url('icn_profile.png') no-repeat center left;
 }
 #sidebar li.icn_folder a {
-background: url(../images/icn_folder.png) no-repeat center left;
+background: url('icn_folder.png') no-repeat center left;
 }
 #sidebar li.icn_photo a {
-background: url(../images/icn_photo.png) no-repeat center left;
+background: url('icn_photo.png') no-repeat center left;
 }
 #sidebar li.icn_audio a {
-background: url(../images/icn_audio.png) no-repeat center left;
+background: url('icn_audio.png') no-repeat center left;
 }
 #sidebar li.icn_video a {
-background: url(../images/icn_video.png) no-repeat center left;
+background: url('icn_video.png') no-repeat center left;
 }
 #sidebar li.icn_settings a {
-background: url(../images/icn_settings.png) no-repeat center left;
+background: url('icn_settings.png') no-repeat center left;
 }
 #sidebar li.icn_security a {
-background: url(../images/icn_security.png) no-repeat center left;
+background: url('icn_security.png') no-repeat center left;
 }
 #sidebar li.icn_jump_back a {
-background: url(../images/icn_jump_back.png) no-repeat center left;
+background: url('icn_jump_back.png') no-repeat center left;
 }
 
 #sidebar p {
@@ -368,7 +368,7 @@ margin-top: 20%;
 section#main {
 width: 77%;
 min-height: 500px;
-background: url(../images/sidebar_shadow.png) repeat-y left top;
+background: url('sidebar_shadow.png') repeat-y left top;
 float: left;
 margin-top: -2px;
 }
@@ -403,7 +403,7 @@ float: left;
 .module header {
 height: 38px;
 width: 100%;
-background: #F1F1F4 url(../images/secondary_bar.png) repeat-x;
+background: #F1F1F4 url('secondary_bar.png') repeat-x;
 -webkit-border-top-left-radius: 5px; -webkit-border-top-right-radius: 5px;
 -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px;
 border-top-left-radius: 5px; border-top-right-radius: 5px;
@@ -413,7 +413,7 @@ border-top-left-radius: 5px; border-top-right-radius: 5px;
 height: 32px;
 width: 100%;
 border-top: 1px solid #9CA1B0;
-background: #F1F1F4 url(../images/module_footer_bg.png) repeat-x;
+background: #F1F1F4 url('module_footer_bg.png') repeat-x;
 -webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px;
 -moz-border-radius-bottomleft: 5px; -moz-border-radius-bottomright: 5px;
 -webkit-border-bottom-left-radius: 5px; -webkit-border-bottom-right-radius: 5px;
@@ -506,7 +506,7 @@ border-bottom: 1px dotted #ccc;
 
 .tablesorter thead tr {
 height: 34px;
-background: url(../images/table_sorter_header.png) repeat-x;
+background: url('table_sorter_header.png') repeat-x;
 text-align: left;
 text-indent: 10px;
 cursor: pointer;
@@ -589,7 +589,7 @@ border-bottom: 1px dotted #cccccc;
 }
 
 input[type=submit] {
-background: #D0D1D4 url(../images/btn_submit.png) repeat-x;
+background: #D0D1D4 url('btn_submit.png') repeat-x;
 border: 1px solid #A8A9A8;
 -webkit-box-shadow: 0 1px 0 #fff;
 -moz-box-shadow: 0 1px 0 #fff;
@@ -610,7 +610,7 @@ color: #333333;
 }
 
 input[type=submit].alt_btn {
-background: #D0D1D4 url(../images/btn_submit_2.png) repeat-x;
+background: #D0D1D4 url('btn_submit_2.png') repeat-x;
 border: 1px solid#30B0C8;
 -webkit-box-shadow: 0 1px 0 #fff;
 -moz-box-shadow: 0 1px 0 #fff;
@@ -631,7 +631,7 @@ color: #001217;
 }
 
 input[type=submit].btn_post_message {
-background: #D0D1D4 url(../images/post_message.png) no-repeat;
+background: #D0D1D4 url('post_message.png') no-repeat;
 display: block;
 width: 37px;
 border: none;
@@ -830,7 +830,7 @@ margin-top: 20px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
-background: #B5E5EF url(../images/icn_alert_info.png) no-repeat;
+background: #B5E5EF url('icn_alert_info.png') no-repeat;
 background-position: 10px 10px;
 border: 1px solid #77BACE;
 color: #082B33;
@@ -846,7 +846,7 @@ margin-top: 20px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
-background: #F5F3BA url(../images/icn_alert_warning.png) no-repeat;
+background: #F5F3BA url('icn_alert_warning.png') no-repeat;
 background-position: 10px 10px;
 border: 1px solid #C7A20D;
 color: #796616;
@@ -862,7 +862,7 @@ margin-top: 20px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
-background: #F3D9D9 url(../images/icn_alert_error.png) no-repeat;
+background: #F3D9D9 url('icn_alert_error.png') no-repeat;
 background-position: 10px 10px;
 border: 1px solid #D20009;
 color: #7B040F;
@@ -878,7 +878,7 @@ margin-top: 20px;
 -webkit-border-radius: 5px;
 -moz-border-radius: 5px;
 border-radius: 5px;
-background: #E2F6C5 url(../images/icn_alert_success.png) no-repeat;
+background: #E2F6C5 url('icn_alert_success.png') no-repeat;
 background-position: 10px 10px;
 border: 1px solid #79C20D;
 color: #32510F;
