--- a/app/views/admin/feed/index.html.haml
+++ b/app/views/admin/feed/index.html.haml
@@ -1,2 +1,4 @@
-%h1 Admin::Feed#index
-%p Find me in app/views/admin/feed/index.html.haml
+.small-9.medium-9.columns
+  %section#content
+    %h1 Admin::Feed#index
+    %p Find me in app/views/admin/feed/index.html.haml
