--- a/app/views/admin/_common_header.html.haml
+++ b/app/views/admin/_common_header.html.haml
@@ -1,8 +1,9 @@
-%header#header
-  %hgroup
-    %h1.site_title
-      %a{:href => "index.html"} Website Admin
-    %h2.section_title Dashboard
-    .btn_view_site
-      %a{:href => "http://www.medialoot.com"} View Site
-/ end of header bar
+.small-12.medium-12.columns
+  %header#header
+    %hgroup
+      %h1.site_title
+        %a{:href => "index.html"} Website Admin
+      %h2.section_title Dashboard
+      .btn_view_site
+        %a{:href => "http://www.medialoot.com"} View Site
+  / end of header bar
