--- a/app/views/admin/_secondary_bar.html.haml
+++ b/app/views/admin/_secondary_bar.html.haml
@@ -1,13 +1,14 @@
-%section#secondary_bar
-  .user
-    %p
-      John Doe (
-      %a{:href => "#"}> 3 Messages
-      )
-    / <a class="logout_user" href="#" title="Logout">Logout</a>
-  .breadcrumbs_container
-    %article.breadcrumbs
-      %a{:href => "index.html"} Website Admin
-      .breadcrumb_divider
-      %a.current Dashboard
-/ end of secondary bar
+.small-12.medium-12.columns
+  %section#secondary_bar
+    .user
+      %p
+        = current_admin.email
+        = "("
+        = link_to "Logout", destroy_admin_session_path, :method => "delete" 
+        = ")"
+    .breadcrumbs_container
+      %article.breadcrumbs
+        %a{:href => "index.html"} Website Admin
+        .breadcrumb_divider
+        %a.current Dashboard
+  / end of secondary bar
