--- a/app/assets/stylesheets/admin/_custom.css
+++ b/app/assets/stylesheets/admin/_custom.css
@@ -365,11 +365,11 @@ margin-top: 20%;
 
 
 section#main {
-width: 77%;
 min-height: 500px;
 background: url('sidebar_shadow.png') repeat-y left top;
 float: left;
 margin-top: -2px;
+margin-left: -28px;
 }
 
 #main h3 {
