--- a/app/views/admin/_side_bar.html.haml
+++ b/app/views/admin/_side_bar.html.haml
@@ -10,7 +10,7 @@
       %li.icn_edit_article
         %a{:href => "#"} Edit Articles
       %li.icn_categories
-        %a{:href => admin_feed_path} Article List
+        %a{:href => admin_feed_index_path} Article List
       %li.icn_tags
         %a{:href => "#"} Tags
     %h3 Users
