--- a/app/views/layouts/devise.html.haml
+++ b/app/views/layouts/devise.html.haml
@@ -8,6 +8,6 @@
     = javascript_include_tag "vendor/modernizr"
     = csrf_meta_tags
   %body
-    #login
+    .small-11.medium-5.columns.small-centered.medium-centered
       = yield
     = javascript_include_tag "website_app"
