--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,27 @@
-%h2 Sign up
+%h2 
+  %center
+    Sign up
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = devise_error_messages!
   .field
+    = f.label :name
+    %br
+    = f.text_field :name
+  .field
+  .field
     = f.label :email
-    %br/
+    %br
     = f.email_field :email, autofocus: true
   .field
     = f.label :password
     - if @validatable
       %em
         (#{@minimum_password_length} characters minimum)
-    %br/
+    %br
     = f.password_field :password, autocomplete: "off"
   .field
     = f.label :password_confirmation
-    %br/
+    %br
     = f.password_field :password_confirmation, autocomplete: "off"
   .actions
     = f.submit "Sign up", :class => "button small radius success right"
