--- a/app/views/website/common/_header.html.haml
+++ b/app/views/website/common/_header.html.haml
@@ -18,7 +18,7 @@
             %li
               %a{:href => "#"} First link in dropdown
             %li
-              = link_to "Sign Out", destroy_user_session_path, :method => "delete"
+              = link_to "Sign Out", destroy_user_session_path
         - else
           = link_to "Sign In", new_user_session_path
     %ul.left
