--- a/app/views/website/common/_side_bar_right.html.haml
+++ b/app/views/website/common/_side_bar_right.html.haml
@@ -1,5 +1,6 @@
-%aside.large-3.columns.hide-for-small-only
-  %p
-    %img{:src => "http://placehold.it/300x440&text=[ad]"}
-  %p
-    %img{:src => "http://placehold.it/300x440&text=[ad]"}
+.medium-3.columns.hide-for-small-only.right
+  %aside
+    %p
+      %img{:src => "http://placehold.it/300x440&text=[ad]"}
+    %p
+      %img{:src => "http://placehold.it/300x440&text=[ad]"}
