--- a/app/assets/stylesheets/admin/_custom.scss
+++ b/app/assets/stylesheets/admin/_custom.scss
@@ -587,62 +587,6 @@ float: left;
 border-bottom: 1px dotted #cccccc;
 }
 
-input[type=submit] {
-background: #D0D1D4 url('btn_submit.png') repeat-x;
-border: 1px solid #A8A9A8;
--webkit-box-shadow: 0 1px 0 #fff;
--moz-box-shadow: 0 1px 0 #fff;
-box-shadow: 0 1px 0 #fff;
-font-weight: bold;
-height: 22px;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-padding: 0 10px;
-color: #666;
-text-shadow: 0 1px 0 #fff;
-cursor: pointer;
-}
-
-input[type=submit]:hover {
-color: #333333;
-}
-
-input[type=submit].alt_btn {
-background: #D0D1D4 url('btn_submit_2.png') repeat-x;
-border: 1px solid#30B0C8;
--webkit-box-shadow: 0 1px 0 #fff;
--moz-box-shadow: 0 1px 0 #fff;
-box-shadow: 0 1px 0 #fff;
-font-weight: bold;
-height: 22px;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
-padding: 0 10px;
-color: #003E49;
-text-shadow: 0 1px 0 #6CDCF9;
-cursor: pointer;
-}
-
-input[type=submit].alt_btn:hover {
-color: #001217;
-}
-
-input[type=submit].btn_post_message {
-background: #D0D1D4 url('post_message.png') no-repeat;
-display: block;
-width: 37px;
-border: none;
-height: 24px;
-cursor: pointer;
-text-indent: -5000px;
-}
-
-input[type=submit].btn_post_message:hover {
-background-position: 0 -24px;
-}
-
 .post_message {
 text-align: left;
 padding: 5px 0;
@@ -884,3 +828,9 @@ color: #32510F;
 padding: 10px 0;
 text-indent: 40px;
 font-size: 14px;}
+.button {
+background-color: #2db73b !important;
+}
+.switch input:checked + label {
+  background: #2db73b;
+}
