--- a/app/views/website/common/_header.html.haml
+++ b/app/views/website/common/_header.html.haml
@@ -2,7 +2,7 @@
   %ul.title-area
     %li.name
       %h1
-        %a{:href => "#"} My Site
+        = link_to "My site", root_path
     %li.toggle-topbar.menu-icon
       %a{:href => "#"}
         %span Menu
