--- a/app/views/admin/feed/_field.html.haml
+++ b/app/views/admin/feed/_field.html.haml
@@ -11,4 +11,5 @@
       = f.text_area :content
   %hr
   .row
-    = f.submit "Update"
+    %center
+      = f.submit "Update", :class => "button small radius"
