--- a/app/views/admin/feed/index.html.haml
+++ b/app/views/admin/feed/index.html.haml
@@ -29,6 +29,6 @@
             %td.text-center
               = link_to "Edit", edit_admin_feed_path(feed)
             %td.text-center
-              %button{:link => admin_feed_path(feed), :class => "small radius del_artice_button"}
+              %button{:link => admin_feed_path(feed), :class => "button small radius del_artice_button"}
                 = "Delete"
 
