--- a/app/views/website/common/_side_bar_left.html.haml
+++ b/app/views/website/common/_side_bar_left.html.haml
@@ -1,4 +1,4 @@
-.large-3.columns.hide-for-small-only
+.medium-3.columns.hide-for-small-only.left
   .panel
     %a{:href => "#"}
       %img{:src => "http://placehold.it/300x240&text=[img]"}
