--- a/app/views/layouts/website.html.haml
+++ b/app/views/layouts/website.html.haml
@@ -9,6 +9,7 @@
     = csrf_meta_tags
   %body
     = render "website/common/header"
+    = render "website/common/side_bar_left"
     = yield
     = render "website/common/side_bar_right"
     = render "website/common/footer"
