--- a/app/views/website/artices/show.html.haml
+++ b/app/views/website/artices/show.html.haml
@@ -6,12 +6,24 @@
         = @artice.title
     - if current_user
       .row
-        - if current_user.feeds.exists? @artice
-          %button{:class => "button small radius right"}
-            = "Saved"
-        - else
-          %button{:id => "save_post_to_user_button", :id_artice => @artice.id, :class => "button small radius right"}
-            = "Save Post"
+        %div{:id => "article-#{@artice.id}"}
+          .medium-4.columns#count_like
+            = @artice.likes.count 
+            = "Like"
+          .medium-4.columns#like_form
+            - if current_user.like?(@artice)
+              = render "shared/unlike", :article => @artice 
+            - else
+              = render "shared/like", :article => @artice
+          .medium-4.columns#button_save_post
+            - if current_user.feeds.exists? @artice
+              = render "shared/saved_post_form"
+              / %button{:class => "button small radius right"}
+              /   = "Saved"
+            - else
+              = render "shared/save_post_form", :article => @artice 
+              / %button{:id => "save_post_to_user_button", :id_artice => @artice.id, :class => "button small radius right"}
+              /   = "Save Post"
     .row
       %p
         = @artice.content
