--- a/app/views/website/artices/show.html.haml
+++ b/app/views/website/artices/show.html.haml
@@ -28,3 +28,8 @@
         = "Bai viet cua"
         %a{:href => "#{@artice.link}", :target => "_blank"}
           = @artice.page.try(:page_name)
+    %hr
+    - if user_signed_in?
+      = render "comments/form"
+    - @comments.each do |comment|
+      = render "comments/comment_form", :comment => comment      
